0.0.3 export button and spinner and notification service
